Fix word-breaks in name column.

--- a/lattice/docs/extra_styles.css
+++ b/lattice/docs/extra_styles.css
@@ -1,3 +1,7 @@
+.md-typeset code {
+  word-break: unset;
+}
+
 dl {
   display: grid;
   grid-template-columns: auto 1fr;
